Fix composer.json type value from project to library.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "doctrine/static-website-generator",
     "description": "Doctrine Static Website Generator",
-    "type": "project",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
