Use tags for doctrine/skeleton-mapper and doctrine/rst-parser

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "require": {
         "php": "^7.1",
         "doctrine/collections": "^1.5",
-        "doctrine/rst-parser": "dev-master",
-        "doctrine/skeleton-mapper": "dev-master",
+        "doctrine/rst-parser": "^0.0.1",
+        "doctrine/skeleton-mapper": "^0.0.1",
         "erusev/parsedown": "^1.7",
         "symfony/filesystem": "^4.1",
         "symfony/finder": "^4.1",
