--- a/composer.json
+++ b/composer.json
@@ -16,20 +16,20 @@
         "doctrine/rst-parser": "^0.1",
         "doctrine/skeleton-mapper": "^1.0",
         "erusev/parsedown": "^1.7",
-        "symfony/filesystem": "^4.1",
-        "symfony/finder": "^4.1",
-        "symfony/http-kernel": "^4.1",
-        "symfony/routing": "^4.1",
-        "symfony/yaml": "^4.1",
+        "symfony/filesystem": "^4.4",
+        "symfony/finder": "^4.4",
+        "symfony/http-kernel": "^4.4",
+        "symfony/routing": "^4.4",
+        "symfony/yaml": "^4.4",
         "twig/twig": "^2.5"
     },
     "require-dev": {
-        "doctrine/coding-standard": "^5.0",
-        "phpstan/phpstan": "^0.10",
-        "phpstan/phpstan-deprecation-rules": "^0.10",
-        "phpstan/phpstan-phpunit": "^0.10",
-        "phpstan/phpstan-strict-rules": "^0.10",
-        "phpunit/phpunit": "^7.0"
+        "doctrine/coding-standard": "^8.2",
+        "phpstan/phpstan": "^0.12.58",
+        "phpstan/phpstan-deprecation-rules": "^0.12.5",
+        "phpstan/phpstan-phpunit": "^0.12.16",
+        "phpstan/phpstan-strict-rules": "^0.12.5",
+        "phpunit/phpunit": "^8.5 | ^9.3"
     },
     "config": {
         "sort-packages": true
