Fix phpcs issues

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -13,5 +13,9 @@
     <file>tests</file>
 
     <rule ref="Doctrine"/>
+
+    <rule ref="Doctrine">
+        <exclude name="SlevomatCodingStandard.TypeHints.PropertyTypeHint.MissingNativeTypeHint"/>
+    </rule>
 </ruleset>
 
