--- a/composer.json
+++ b/composer.json
@@ -11,28 +11,31 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "doctrine/collections": "^1.5",
-        "doctrine/rst-parser": "^0.1",
-        "doctrine/skeleton-mapper": "^1.0",
+        "php": "^8.1",
+        "doctrine/collections": "^1.8",
+        "doctrine/rst-parser": "^0.5.3",
+        "doctrine/skeleton-mapper": "2.0.x-dev",
         "erusev/parsedown": "^1.7",
-        "symfony/filesystem": "^4.4",
-        "symfony/finder": "^4.4",
-        "symfony/http-kernel": "^4.4",
-        "symfony/routing": "^4.4",
-        "symfony/yaml": "^4.4",
-        "twig/twig": "^2.5"
+        "symfony/filesystem": "^6.0",
+        "symfony/finder": "^6.0",
+        "symfony/http-kernel": "^6.0",
+        "symfony/routing": "^6.0",
+        "symfony/yaml": "^6.0",
+        "twig/twig": "^3.5"
     },
     "require-dev": {
-        "doctrine/coding-standard": "^8.2",
-        "phpstan/phpstan": "^0.12.58",
-        "phpstan/phpstan-deprecation-rules": "^0.12.5",
-        "phpstan/phpstan-phpunit": "^0.12.16",
-        "phpstan/phpstan-strict-rules": "^0.12.5",
-        "phpunit/phpunit": "^8.5 | ^9.3"
+        "doctrine/coding-standard": "^11.1",
+        "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan-deprecation-rules": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpstan/phpstan-strict-rules": "^1.4",
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "autoload": {
         "psr-4": {
