--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -16,31 +16,18 @@ jobs:
     name: "Static Analysis with PHPStan"
     runs-on: "ubuntu-latest"
 
-    strategy:
-      matrix:
-        php-version:
-          - "8.1"
-
     steps:
-      - name: "Checkout code"
-        uses: "actions/checkout@v2"
+      - uses: "actions/checkout@v2"
 
-      - name: "Install PHP"
+      - name: "Setup PHP Action"
         uses: "shivammathur/setup-php@v2"
         with:
-          coverage: "none"
-          php-version: "${{ matrix.php-version }}"
-          tools: "cs2pr"
+          php-version: "8.1"
 
-      - name: "Cache dependencies installed with composer"
-        uses: "actions/cache@v2"
+      - name: "Install dependencies with Composer"
+        uses: "ramsey/composer-install@v1"
         with:
-          path: "~/.composer/cache"
-          key: "php-${{ matrix.php-version }}-composer-locked-${{ hashFiles('composer.lock') }}"
-          restore-keys: "php-${{ matrix.php-version }}-composer-locked-"
+          composer-options: "--prefer-dist --no-progress --no-suggest"
 
-      - name: "Install dependencies with composer"
-        run: "composer install --no-interaction --no-progress --no-suggest"
-
-      - name: "Run a static analysis with phpstan/phpstan"
-        run: "vendor/bin/phpstan analyse --error-format=checkstyle | cs2pr"
+      - name: "Run PHPStan"
+        run: "./vendor/bin/phpstan analyse"
