--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
          colors="true"
-         verbose="true"
          beStrictAboutOutputDuringTests="true"
+         cacheDirectory=".phpunit.cache"
 >
-    <testsuites>
-        <testsuite name="Doctrine Static Website Generator Test Suite">
-            <directory>./tests</directory>
-        </testsuite>
-    </testsuites>
-
-    <filter>
-        <whitelist>
-            <directory>./lib</directory>
-        </whitelist>
-    </filter>
+  <coverage>
+    <include>
+      <directory>./lib</directory>
+    </include>
+  </coverage>
+  <testsuites>
+    <testsuite name="Doctrine Static Website Generator Test Suite">
+      <directory>./tests</directory>
+    </testsuite>
+  </testsuites>
 </phpunit>
